# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

December 20, 2001
	Surface.set_alpha() and set_colorkey() accept None
	event.set_allowed() and set_blocked() accept None

pygame-13
December 17, 2001
	small preps for the full 1.3 release

December 15, 2001
	small changes to sprite before release

December 2, 2001
	small protection for display Surfaces after display.quit()

December 1, 2001
	made time.delay() more accurate
	created time.wait() to work like old delay()
	added time.Clock objects for framerate tracking

November 26, 2001
        Surface.convert() doesn't segfault before pygame.init()

November 20, 2001
	added pygame.sprite.Group.update()
	Surface.blit() protection for alpha->8bit relaxed

November 19, 2001
        fixed image.fromstring() for "RGBA" mode

November 18, 2001
	can stream python file-like objects to SDL threads

November 15, 2001
	cleanups for transform.rotate

November 13, 2001
	added sprite module

November 12, 2001
	image.tostring() "RGBA" works with colorkey

November 3, 2001
        filled shape drawing now clips properly [BUG]
        Rect object correctly compare (==,<,>)

November 2, 2001
	pygame.time.get_ticks() returns 0 before pygame.init()

October 22, 2001
	small fix for filled ellipses/circles

September 27, 2001
	drawing filled circles returns bounding rect
	ellipses and circles drawn inside given area
	mixer init can take chunksize
	fix in clipped horizontal line drawing [BUG]

September 26, 2001
	key.set_repeat() raises exception on error, smarter args

September 22, 2001
	added Rect.clamp_ip, for inplace clamping
	display.update(None) will update full screen

September 21, 2001
	Surface.convert() respects the SRCALPHA flag when passing depth


pygame-12
September 1, 2001
	fixed typo in pygame.cursor

Aug 30, 2001
	added VIDEOEXPOSE event

Aug 29, 2001